2004-10-14  Fumitoshi UKAI  <ukai@debian.or.jp>

	* Bug#276246: w3m's locale parsing should at least see '@euro' modifier
	* config.h (HAVE_LANGINFO_CODESET): added
	* configure.in (AM_LANGINFO_CODESET): added
	* libwc/charset.c: #include <langinfo.h>
	       (wc_charset_to_ces): use nl_langinfo(CODESET)

2004-09-30  Hiroyuki Ito <ZXB01226@nifty.com>

	* [w3m-dev 04108] PIPE_BUF
	* main.c (pipeBuf): set buf->currentURL.file to prevent
		segfault by "PIPE_BUF cat;VIEW SOURCE;"

2004-08-31  SAKAI Kiyotaka <ksakai@kso.netwk.ntt-at.co.jp>

	* [w3m-dev 04104] w3mmail.cgi
	* scripts/w3mmail.cgi.in: strip ^M

2004-08-17  Hiroyuki Ito <ZXB01226@nifty.com>

	* [w3m-dev 04099] Re: w3m-img gtk2
	* w3mimg/fb/fb_gdkpixbuf.c (fb_image_load): fix resize bug

2004-08-06  Hiroyuki Ito <ZXB01226@nifty.com>

	* [w3m-dev 04097] Re: w3m-img gtk2
	* w3mimg/fb/fb_gdkpixbuf.c (draw): no need bg
		(get_animation_size): use GTimeVal
		(fb_image_load): use GTimeVal
				fix for animation
	* w3mimg/x11/x11_w3mimg.c (get_animation_size): use GTimeVal
		(x11_load_image): use GTimeVal
				fix for animation

2004-08-05  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 04096] w3m-img gtk2
	* acinclude.m4 (AC_W3M_IMAGE): add USE_GTK2
		add --with-imagelib=gtk2
	* aclocal.m4 config.guess config.sub configure: regen
	* config.h.in: add USE_GTK2
	* w3mimg/fb/fb_gdkpixbuf.c: support USE_GTK2
	* w3mimg/fb/fb_img.h: add fb_image_init()
	* w3mimg/fb/fb_imlib2.h: fb_image_init() stub
	* w3mimg/fb/fb_w3mimg.c: call fb_image_init()
	* w3mimg/x11/x11_w3mimg.c: support USE_GTK2

2004-08-03  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 04095] build fix when configure with --enable-messagel10n
	* main.c (main): locale and textdomain initialization if ENABLE_NLS
	* menu.c (initMenu): use _() instead of gettext()
	* rc.c (show_params): use _() instead of gettext()

2004-07-18  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 04094] Re: option panel: gettextize select list